2009-03-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix comment typo.
	* lib/am/distdir.am (distcheck): Fix typo in comment.

	Ignore generated files below doc/amhello for git.
	* doc/amhello/.gitignore: New file.

2009-02-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Program variables): Add cross reference to
	`Flag Variables Ordering' node.
	Report by Karl Berry.

2009-01-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix mmodely.test to work on Solaris 10.
	* tests/mmodely.test: Define yylex, to satisfy needed symbol in
	libfl.  Return from main instead of using exit, undeclared.
	* THANKS: Update.
	Report by Chris Hoogendyk.

2009-01-30  Karl Berry  <karl@freefriends.org>

	* lib/gnupload: Add download URL to --help output.

2009-01-23  Eric Blake  <ebb9@byu.net>

	Use no-arg macros via AC_REQUIRE for consistency.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Require, rather than directly
	expand, AM_PROG_INSTALL_SH and AM_PROG_INSTALL_STRIP.
	* configure: Regenerate.

2009-01-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Bump copyright years.
	* aclocal.in (write_aclocal, version): Bump copyright years.
	* automake.in (gen_copyright, version): Likewise.
	* doc/automake.texi: Likewise.

2008-12-29  Chris Pickett  <chris.pickett@mail.mcgill.ca>  (tiny change)

	* doc/automake.texi (LIBOBJS): Clarify overriding of
	`*_DEPENDENCIES'.
	* THANKS: Update.

2008-12-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Revamp semantics for `missing help2man' and manpage distribution.
	Previously, `missing help2man' would create a missing man page
	containing an error message, and exit 1.  This does not play
	well with `make': the next run will see this particular man page
	as being up to date, and will only error out on the next
	generated man page, if any; repeat until all pages are done.
	This patch changes `missing' to exit successfully in this case,
	but `make dist' will ensure that no such man pages are packaged.