@@ -2,7 +2,7 @@
 # @configure_input@
 #
 # Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004,
-# 2005, 2006, 2007, 2008  Free Software Foundation, Inc.
+# 2005, 2006, 2007, 2008, 2009  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -240,6 +240,15 @@ case "$srcdir" in
     srcdir=`CDPATH=: && cd "$srcdir" && pwd`
     ;;
 esac
+
+# Automake 1.10a uses a trap for cleanup and an exit wrapper function.
+# We add this here, too, in order to facilitate backporting tests.
+Exit ()
+{
+  set +e
+  (exit $1)
+  exit $1
+}
 
 chmod -R a+rwx testSubDir > /dev/null 2>&1
 rm -rf testSubDir > /dev/null 2>&1
