@@ -1,5 +1,9 @@
 2009-03-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Backport Exit function from master, for easier cherry-picking.
+	* tests/defs.in (Exit): New function, backported from master,
+	to allow easier backporting of tests from master.
+
 	Fix comment typo.
 	* lib/am/distdir.am (distcheck): Fix typo in comment.
 
